adapt links in footer to point to EJC homepage

--- a/translations/messages+intl-icu.de.yaml
+++ b/translations/messages+intl-icu.de.yaml
@@ -4,7 +4,7 @@ base:
     de: Deutsch
     en: Englisch
   link-text:
-    homepage: 'Homepage des TJV'
+    homepage: 'Homepage des EJC'
     about-us: Impressum
     privacy: Datenschutz
   menu:
