--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -4,7 +4,7 @@ base:
     de: german
     en: english
   link-text:
-    homepage: 'TJV homepage'
+    homepage: 'EJC homepage'
     about-us: 'about us'
     privacy: privacy
   menu:
