--- a/translations/validators.de.yaml
+++ b/translations/validators.de.yaml
@@ -131,3 +131,4 @@ Error: Fehler
 'Please select a valid option.': 'Bitte wählen Sie eine gültige Option.'
 'Please select a valid range.': 'Bitte wählen Sie einen gültigen Bereich.'
 'Please enter a valid week.': 'Bitte geben Sie eine gültige Woche ein.'
+'There is already an account with this email': 'Es gibt bereits einen Account mit dieser Email-Adresse.'
