--- a/translations/validators.en.yaml
+++ b/translations/validators.en.yaml
@@ -131,3 +131,4 @@ Error: Error
 'Please select a valid option.': 'Please select a valid option.'
 'Please select a valid range.': 'Please select a valid range.'
 'Please enter a valid week.': 'Please enter a valid week.'
+'There is already an account with this email': 'There is already an account with this email.'
