--- a/translations/messages+intl-icu.de.yaml
+++ b/translations/messages+intl-icu.de.yaml
@@ -9,7 +9,27 @@ base:
     privacy: Datenschutz
   menu:
     home: Start
-
+    register: Registrieren
+    login: Einloggen
+    logout: Ausloggen
+login:
+    title: Einloggen
+    description: 'Bitte trage deine Email-Adresse und dein Passwort ein, mit welchen du deinen Verband/Verein registriert hast.'
+    action: einloggen
+registration:
+    data:
+        email: Email
+        password: Passwort
+        club: Verein
+        country: Land
+        contact-person: Ansprechpartner
+        first-name: Vorname
+        last-name: Nachname
+        telephone: Telefon
+    new:
+        title: Registrierung
+        description: 'Trage hier deine Kontaktdaten ein. Wenn du dich mit deinen Daten registriert hast, kannst du Wettkämpfer und Wettkämpferinnen anmelden.'
+        action: registrieren
 welcome:
   title: 'Willkommen zum Messe-Cup und EGA-Pokal'
   greeting: Hallo!
