add login and logout

--- a/translations/messages+intl-icu.de.yaml
+++ b/translations/messages+intl-icu.de.yaml
@@ -36,3 +36,5 @@ welcome:
   inactive: 'Aktuell ist die Anmeldung für den Messe-Cup und EGA-Pokal nicht möglich.'
   active: 'Dies ist das neue Anmeldeformular für die Registrierung zum Messe-Cup und EGA-Pokal {year}.'
   contact-us: 'Bei Fragen kontaktiere uns:'
+  overview:
+      registration: Kontaktdaten
