add contestant overview (authenticated welcome page)

--- a/translations/messages+intl-icu.de.yaml
+++ b/translations/messages+intl-icu.de.yaml
@@ -72,3 +72,6 @@ welcome:
   contact-us: 'Bei Fragen kontaktiere uns:'
   overview:
       registration: Kontaktdaten
+      contestant:
+          ega: EGA-Pokal
+          messe: Messe-Cup
