--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -40,6 +40,9 @@ contestant:
         comment:
             title: 'add a comment'
             for: 'comment for'
+    status:
+        created: 'not yet saved'
+        saved: 'saved and registered'
 global:
     forms:
         button:
