--- a/translations/messages+intl-icu.de.yaml
+++ b/translations/messages+intl-icu.de.yaml
@@ -10,6 +10,7 @@ base:
   menu:
     home: Start
     register: Registrieren
+    registration_edit: Kontaktdaten
     login: Einloggen
     logout: Ausloggen
     contestant:
@@ -63,6 +64,11 @@ registration:
         first-name: Vorname
         last-name: Nachname
         telephone: Telefon
+    edit:
+        title: 'Kontaktdaten bearbeiten'
+        description: 'Trage hier deine Kontaktdaten ein. Deine Email-Adresse kannst du leider nicht ändern. Wenn du dies wirklich brauchst, kontaktiere uns.'
+        delete: 'Diese Registrierung löschen'
+        confirm-delete: "Bist du sicher, die Registrierung für {club} löschen zu wollen?"
     new:
         title: Registrierung
         description: 'Trage hier deine Kontaktdaten ein. Wenn du dich mit deinen Daten registriert hast, kannst du Wettkämpfer und Wettkämpferinnen anmelden.'
