--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -10,6 +10,7 @@ base:
   menu:
     home: Home
     register: Register
+    registration_edit: 'Contact Information'
     login: Login
     logout: Logout
     contestant:
@@ -63,6 +64,11 @@ registration:
         first-name: 'First name'
         last-name: 'Last name'
         telephone: Telephone
+    edit:
+        title: 'Edit Contact Information'
+        description: 'Edit your contact information. The email address cannot be changed. If you really need to, please contact us.'
+        delete: 'Delete this registration'
+        confirm-delete: "Are you sure you want to delete this registration of {club}?"
     new:
         title: Registration
         description: "Register here! In order to proceed with the registration, we will need a contact person. This information is also required for later changes that might or might not be needed. Once you've registered your club, you can add your contestants."
