--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -91,6 +91,9 @@ registration:
         title: 'Edit Contact Information'
         description: 'Edit your contact information. The email address cannot be changed. If you really need to, please contact us.'
         delete: 'Delete this registration'
+        password:
+            title: 'Change password'
+            description: 'Change your password here. Password must be at least 6 characters long.'
         confirm-delete: "Are you sure you want to delete this registration of {club}?"
     new:
         title: Registration
@@ -104,3 +107,6 @@ welcome:
   contact-us: 'Feel free to contact us:'
   overview:
       registration: 'Contact Information'
+      contestant:
+          ega: EGA-Pokal
+          messe: Messe-Cup
