--- a/translations/messages+intl-icu.de.yaml
+++ b/translations/messages+intl-icu.de.yaml
@@ -125,3 +125,4 @@ welcome:
     contestant:
       ega: EGA-Pokal
       messe: Messe-Cup
+      description: '<strong>{total}</strong> registrierte Wettkämpfer_innen von <strong>{clubs}</strong> Vereinen/Nationen in den folgenden Klassen:'
