--- a/translations/messages+intl-icu.de.yaml
+++ b/translations/messages+intl-icu.de.yaml
@@ -12,7 +12,7 @@ admin:
     title: 'Aktion'
     login: 'Als dieser Nutzer einloggen'
   ega:
-    title: 'Übersicht Teilnehmer_innen EGA-Pokal'
+    title: 'Übersicht Teilnehmer_innen ega-Pokal'
   messe:
     title: 'Übersicht Teilnehmer_innen Messe-Cup'
 base:
@@ -34,7 +34,7 @@ base:
     admin:
       title: Admin
       index: Übersicht
-      ega: EGA-Pokal
+      ega: ega-Pokal
       messe: Messe-Cup
     home: Start
     register: Registrieren
@@ -43,11 +43,11 @@ base:
     logout: Ausloggen
     exit-impersonation: 'Zurück zum Admin'
     contestant:
-      ega: EGA-Pokal
+      ega: ega-Pokal
       messe: Messe-Cup
 contestant:
   title:
-    ega: EGA-Pokal
+    ega: ega-Pokal
     messe: Messe-Cup
   description: 'Bitte trage so viele Informationen ein, wie du kannst.'
   data:
@@ -106,10 +106,10 @@ registration:
     description: 'Trage hier deine Kontaktdaten ein. Wenn du dich mit deinen Daten registriert hast, kannst du Wettkämpfer und Wettkämpferinnen anmelden.'
     action: registrieren
 welcome:
-  title: 'Willkommen zum Messe-Cup und EGA-Pokal'
+  title: 'Willkommen zum Messe-Cup und ega-Pokal'
   greeting: Hallo!
-  inactive: 'Aktuell ist die Anmeldung für den Messe-Cup und EGA-Pokal nicht möglich.'
-  active: 'Dies ist das neue Anmeldeformular für die Registrierung zum Messe-Cup und EGA-Pokal {year}.'
+  inactive: 'Aktuell ist die Anmeldung für den Messe-Cup und ega-Pokal nicht möglich.'
+  active: 'Dies ist das neue Anmeldeformular für die Registrierung zum Messe-Cup und ega-Pokal {year}.'
   contact-us:
     title: 'Bei Fragen kontaktiere uns:'
     name: 'Erfurter Judo-Club e.V.'
@@ -123,6 +123,6 @@ welcome:
   overview:
     registration: Kontaktdaten
     contestant:
-      ega: EGA-Pokal
+      ega: ega-Pokal
       messe: Messe-Cup
       description: '<strong>{total}</strong> registrierte Wettkämpfer_innen von <strong>{clubs}</strong> Vereinen/Nationen in den folgenden Klassen:'
