--- a/translations/messages+intl-icu.en.yaml
+++ b/translations/messages+intl-icu.en.yaml
@@ -152,6 +152,8 @@ welcome:
     send-invoice: 'Send Invoice'
     registration: 'Contact Information'
     contestant:
+      description:
+        index: 'You have registered the following contestants:'
+        anonymous: '<strong>{total}</strong> registered competitors from <strong>{clubs}</strong> clubs/nations in the following categories:'
       ega: ega-Pokal
       messe: Messe-Cup
-      description: '<strong>{total}</strong> registered competitors from <strong>{clubs}</strong> clubs/nations in the following categories:'
