--- a/translations/validators.en.yaml
+++ b/translations/validators.en.yaml
@@ -132,3 +132,7 @@ Error: Error
 'Please select a valid range.': 'Please select a valid range.'
 'Please enter a valid week.': 'Please enter a valid week.'
 'There is already an account with this email': 'There is already an account with this email.'
+'The password fields must match.': 'The password fields must match.'
+'Your password should be at least {{ limit }} characters': 'Your password should be at least {{ limit }} characters'
+'Please enter a password': 'Please enter a password'
+'Please enter your email': 'Please enter your email'
