--- a/translations/messages+intl-icu.de.yaml
+++ b/translations/messages+intl-icu.de.yaml
@@ -181,4 +181,6 @@ welcome:
         index: 'Du hast folgende Sportler und Sportlerinnen registriert:'
         anonymous: '<strong>{total}</strong> registrierte Wettkämpfer_innen von <strong>{clubs}</strong> Vereinen/Nationen in den folgenden Klassen:'
       ega: ega-Pokal
+      level-ega: 'Füllstand ega-Pokal'
       messe: Messe-Cup
+      level-messe: 'Füllstand Messe-Cup'
