--- a/translations/messages+intl-icu.de.yaml
+++ b/translations/messages+intl-icu.de.yaml
@@ -178,6 +178,6 @@ welcome:
         index: 'Du hast folgende Sportler und Sportlerinnen registriert:'
         anonymous: '<strong>{total}</strong> registrierte Wettkämpfer_innen von <strong>{clubs}</strong> Vereinen/Nationen in den folgenden Klassen:'
       ega: ega-Pokal
-      level-ega: 'Füllstand ega-Pokal'
+      level-ega: 'Auslastung ega-Pokal'
       messe: Messe-Cup
-      level-messe: 'Füllstand Messe-Cup'
+      level-messe: 'Auslastung Messe-Cup'
