add created at property to admin contestants overview

--- a/translations/messages+intl-icu.de.yaml
+++ b/translations/messages+intl-icu.de.yaml
@@ -81,6 +81,7 @@ contestant:
       ega: U13
       messe: U16
     weight-category: Gewichtsklasse
+    created-at: Meldedatum
     comment:
       title: 'Kommentar hinzufügen'
       for: 'Kommentar für'
