--- a/translations/messages+intl-icu.de.yaml
+++ b/translations/messages+intl-icu.de.yaml
@@ -119,6 +119,7 @@ registration:
     password: Passwort
     club: Verein
     country: Land
+    state: Bundesland
     contact-person: Ansprechpartner
     first-name: Vorname
     last-name: Nachname
